--- a/index.html
+++ b/index.html
@@ -3,8 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="lib/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header class="main-header">
+        <div class="container">
+            <a href="#">
+                <img src="images/logo.png" alt="">
+            </a>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Service</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing Table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">How it work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Happy Clients</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <section class="welcome">
+        <div class="container">
+            <header class="section-header">
+                <h1>Boost up your Local business</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
+            </header>
+            <form>
 
+            </form>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="images/laptop.png" alt="">
+                    </div>
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="images/laptop.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="images/laptop.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="Services"></section>
+    <section class="About-us"></section>
+    <section class="Your-price"></section>
+    <section class="How-it-works"></section>
+    <section class="Clients"></section>
+    <section class="Newsletter"></section>
+    <footer>
+        <div>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Service</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing Table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">How it work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Happy Clients</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <p>All contents © copyright 2014 Business Theme. All rights reserved Designed by: <a href="#">akhilwebfolio</a></p>
+        </div>
+    </footer>
+    <script src="lib/jquery-2.2.4.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
