--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
             </header>
             <form>
-                <label><input type="text" name="name" placeholder="Full Name"></label>
-                <label><input type="email" name="name" placeholder="Email Address"></label>
-                <label><input type="text" name="name" placeholder="Phone Number"></label>
+                <label><input type="text" name="name" placeholder="Full Name" class="input-name"></label>
+                <label><input type="email" name="email" placeholder="Email Address" class="input-email"></label>
+                <label><input type="text" name="name" placeholder="Phone Number" class="input-number"></label>
                 <button type="submit" class="submit-btn">Request a quote</button>
             </form>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
