--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </section>
-    <section class="Services">
+    <section class="services">
         <header class="section-header">
             <h2>Our Services</h2>
             <p>Lorem Ipsum is simply dummy Business industry.</p>
@@ -83,18 +83,13 @@
                     since the 1500s, when an unknown printer.</p>
             </li>
             <li>
-                <h4>Working Contact form</h4>
+                <h4>Fully Responsive Design</h4>
                 <p>Many desktop publishing packages and web page editors now use Lorem Ipsum
                     as their default model text, and a search for 'lorem ipsum' will uncover
                     many web sites still in their infancy</p>
             </li>
             <li>
-                <h4>Friendly Code</h4>
-                <p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-                    exact original form, accompanied by English versions from the 1914 translation by H. Rackham</p>
-            </li>
-            <li>
-                <h4>Fully Responsive Design</h4>
+                <h4>Working Contact form</h4>
                 <p>Many desktop publishing packages and web page editors now use Lorem Ipsum
                     as their default model text, and a search for 'lorem ipsum' will uncover
                     many web sites still in their infancy</p>
@@ -102,8 +97,12 @@
             <li>
                 <h4>Retina Ready icons here</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
-                    or randomised words which don't look even slightly believable.
-                    If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything</p>
+                    or randomised words which don't look even slightly believable.</p>
+            </li>
+            <li>
+                <h4>Friendly Code</h4>
+                <p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their
+                    exact original form, accompanied by English versions from the 1914 translation by H. Rackham</p>
             </li>
             <li>
                 <h4>Flat trendy landing page Design</h4>
