--- a/index.html
+++ b/index.html
@@ -112,11 +112,26 @@
             </li>
         </ul>
     </section>
-    <section class="About-us"></section>
-    <section class="Your-price"></section>
-    <section class="How-it-works"></section>
-    <section class="Clients"></section>
-    <section class="Newsletter"></section>
+    <section class="about-us">
+        <div class="bg-area"></div>
+        <div class="text-area">
+            <header class="section-header">
+                <h2>ABout us</h2>
+            </header>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type
+                specimen book. It has survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. It was popularised in
+                the ore recently with desktop publishing software like Aldus PageMaker including
+                versions of Lorem Ipsum</p>
+            <button type="button" class="main-btn">Read more</button>
+        </div>
+    </section>
+    <section class="your-price"></section>
+    <section class="how-it-works"></section>
+    <section class="clients"></section>
+    <section class="newsletter"></section>
     <footer>
         <div>
             <ul class="nav nav-pills">
