--- a/index.html
+++ b/index.html
@@ -128,7 +128,23 @@
             <button type="button" class="main-btn">Read more</button>
         </div>
     </section>
-    <section class="your-price"></section>
+    <section class="your-price">
+        <header class="section-header">
+            <h2>Choose your price</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing typesetting.</p>
+        </header>
+        <ul class="price-list">
+            <li>
+                <p class="plan"></p>
+            </li>
+            <li>
+                <p class="plan"></p>
+            </li>
+            <li>
+                <p class="plan"></p>
+            </li>
+        </ul>
+    </section>
     <section class="how-it-works"></section>
     <section class="clients"></section>
     <section class="newsletter"></section>
