--- a/index.html
+++ b/index.html
@@ -135,13 +135,46 @@
         </header>
         <ul class="price-list">
             <li>
-                <p class="plan"></p>
+                <p class="plan">Basic plan</p>
+                <div class="price">
+                    <div>
+                        <span>$</span>
+                        <span class="price-number">22</span>
+                    </div>
+                    <p>per month</p>
+                </div>
+                <p class="border-text">1 Account</p>
+                <p class="border-text">8 hour support</p>
+                <p class="border-text">Custom Cloud Services</p>
+                <button type="button" class="main-btn">Get Started</button>
             </li>
             <li>
-                <p class="plan"></p>
+                <p class="plan">Premium plan</p>
+                <div class="price">
+                    <div>
+                        <span>$</span>
+                        <span class="price-number">42</span>
+                    </div>
+                    <p>per month</p>
+                </div>
+                <p class="border-text">2 Account</p>
+                <p class="border-text">100MB Storage</p>
+                <p class="border-text">Custom Cloud Services</p>
+                <button type="button" class="main-btn">Get Started</button>
             </li>
             <li>
-                <p class="plan"></p>
+                <p class="plan">Gold plan</p>
+                <div class="price">
+                    <div>
+                        <span>$</span>
+                        <span class="price-number">62</span>
+                    </div>
+                    <p>per month</p>
+                </div>
+                <p class="border-text">8 Account</p>
+                <p class="border-text">24 hour support</p>
+                <p class="border-text">Custom Cloud Services</p>
+                <button type="button" class="main-btn">Get Started</button>
             </li>
         </ul>
     </section>
