--- a/index.html
+++ b/index.html
@@ -178,7 +178,35 @@
             </li>
         </ul>
     </section>
-    <section class="how-it-works"></section>
+    <section class="how-it-works">
+        <header class="section-header">
+            <h2>How it works</h2>
+            <p>Lorem Ipsum is simply dummy Business industry</p>
+        </header>
+        <ul class="steps-list">
+            <li>
+                <h3>Step 1</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                    ustry. Lorem Ipsum has been</p>
+            </li>
+            <li>
+                <h3>Step 2</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                    ustry. Lorem Ipsum has been</p>
+            </li>
+            <li>
+                <h3>Step 3</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                    ustry. Lorem Ipsum has been</p>
+            </li>
+            <li>
+                <h3>Step 4</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                    ustry. Lorem Ipsum has been</p>
+            </li>
+        </ul>
+        <button type="button" class="main-btn">Get start Now</button>
+    </section>
     <section class="clients"></section>
     <section class="newsletter"></section>
     <footer>
