--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <form>
                 <label><input type="text" name="name" placeholder="Full Name" class="input-name"></label>
                 <label><input type="email" name="email" placeholder="Email Address" class="input-email"></label>
-                <label><input type="text" name="name" placeholder="Phone Number" class="input-number"></label>
+                <label><input type="text" name="phone" placeholder="Phone Number" class="input-number"></label>
                 <button type="submit" class="submit-btn">Request a quote</button>
             </form>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -207,8 +207,36 @@
         </ul>
         <button type="button" class="main-btn">Get start Now</button>
     </section>
-    <section class="clients"></section>
-    <section class="newsletter"></section>
+    <section class="clients">
+        <header class="section-header">
+            <h2>Happy Clients</h2>
+            <p>We are explain who is using our business solutions</p>
+        </header>
+    </section>
+    <section class="newsletter">
+        <div class="container">
+            <header class="section-header">
+                <h2>newsletter</h2>
+                <p>Lorem Ipsum is simply dummy Business industry</p>
+            </header>
+            <form>
+                <label><input type="text" name="name" placeholder="Full Name" class="input-name"></label>
+                <label><input type="email" name="email" placeholder="Email Address" class="input-email"></label>
+                <button type="submit" class="submit-btn">Subscribe now</button>
+            </form>
+            <div class="map">
+                <div class="gray-shape">
+                    <h5>Address</h5>
+                    <p>Business street</p>
+                    <p>Second north section</p>
+                    <p>Bavani nagar. 88769</p>
+                    <p>Call: +987-9976-999</p>
+                    <a href="#" class="orange-text">info@businessface.com</a>
+                </div>
+                <img src="images/logo.png" alt="" class="logo">
+            </div>
+        </div>
+    </section>
     <footer>
         <div>
             <ul class="nav nav-pills">
