--- a/index.html
+++ b/index.html
@@ -208,10 +208,52 @@
         <button type="button" class="main-btn">Get start Now</button>
     </section>
     <section class="clients">
-        <header class="section-header">
-            <h2>Happy Clients</h2>
-            <p>We are explain who is using our business solutions</p>
-        </header>
+        <div class="container">
+            <header class="section-header">
+                <h2>Happy Clients</h2>
+                <p>We are explain who is using our business solutions</p>
+            </header>
+            <ul class="clients-list">
+                <li>
+                    <img src="images/photo1.png" alt="">
+                    <div>
+                        <cite>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and scrambled
+                            it to make.</cite>
+                        <p><span class="orange">Darwin Michle,</span> Project manager</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/photo2.png" alt="">
+                    <div>
+                        <cite>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and scrambled
+                            it to make.</cite>
+                        <p><span class="orange">Clips arter,</span> Lipsum directer</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/photo3.png" alt="">
+                    <div>
+                        <cite>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industrystandard dummy text ever since the 1500s,
+                            wen an unknown printer took a galley of type and scrambled to make a type specimen book.</cite>
+                        <p><span class="orange">Madam Elisabath,</span> Creative Director</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/photo4.png" alt="">
+                    <div>
+                        <cite>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industrystandard dummy text ever since the 1500s,
+                            wen an unknown printer took a galley of type and scrambled to make a type specimen book.</cite>
+                        <p><span class="orange">zam cristafr,</span> manager</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="newsletter">
         <div class="container">
