--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
     </section>
     <footer>
-        <div>
+        <div class="footer-menu">
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Home</a>
