--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
     </section>
     <footer>
-        <div class="footer-menu">
+        <nav class="footer-menu">
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Home</a>
@@ -304,8 +304,23 @@
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
-        </div>
-        <div>
+        </nav>
+        <span class="phone-number"> +987 9976 999</span>
+        <ul class="social">
+            <li class="tw">
+                <a href="#"></a>
+            </li>
+            <li class="fb">
+                <a href="#"></a>
+            </li>
+            <li class="go">
+                <a href="#"></a>
+            </li>
+            <li class="in">
+                <a href="#"></a>
+            </li>
+        </ul>
+        <div class="footer-info">
             <p>All contents © copyright 2014 Business Theme. All rights reserved Designed by: <a href="#">akhilwebfolio</a></p>
         </div>
     </footer>
