--- a/index.html
+++ b/index.html
@@ -307,17 +307,17 @@
         </nav>
         <span class="phone-number"> +987 9976 999</span>
         <ul class="social">
-            <li class="tw">
-                <a href="#"></a>
+            <li>
+                <a href="#" class="tw"></a>
             </li>
-            <li class="fb">
-                <a href="#"></a>
+            <li>
+                <a href="#" class="fb"></a>
             </li>
-            <li class="go">
-                <a href="#"></a>
+            <li>
+                <a href="#" class="go"></a>
             </li>
-            <li class="in">
-                <a href="#"></a>
+            <li>
+                <a href="#" class="in"></a>
             </li>
         </ul>
         <div class="footer-info">
