--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="#">
                 <img src="images/logo.png" alt="">
             </a>
+            <div class="mobile-menu"></div>
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Home</a>
