--- a/index.html
+++ b/index.html
@@ -72,46 +72,48 @@
         </div>
     </section>
     <section class="services">
-        <header class="section-header">
-            <h2>Our Services</h2>
-            <p>Lorem Ipsum is simply dummy Business industry.</p>
-        </header>
-        <ul class="services-list">
-            <li>
-                <h4>Font-Awesome Icons</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                    ustry. Lorem Ipsum has been the industry's standard dummy text ever
-                    since the 1500s, when an unknown printer.</p>
-            </li>
-            <li>
-                <h4>Fully Responsive Design</h4>
-                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum
-                    as their default model text, and a search for 'lorem ipsum' will uncover
-                    many web sites still in their infancy</p>
-            </li>
-            <li>
-                <h4>Working Contact form</h4>
-                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum
-                    as their default model text, and a search for 'lorem ipsum' will uncover
-                    many web sites still in their infancy</p>
-            </li>
-            <li>
-                <h4>Retina Ready icons here</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
-                    or randomised words which don't look even slightly believable.</p>
-            </li>
-            <li>
-                <h4>Friendly Code</h4>
-                <p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-                    exact original form, accompanied by English versions from the 1914 translation by H. Rackham</p>
-            </li>
-            <li>
-                <h4>Flat trendy landing page Design</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                    ustry. Lorem Ipsum has been the industry's standard dummy text ever
-                    since the 1500s, when an unknown printer.</p>
-            </li>
-        </ul>
+        <div class="container">
+            <header class="section-header">
+                <h2>Our Services</h2>
+                <p>Lorem Ipsum is simply dummy Business industry.</p>
+            </header>
+            <ul class="services-list">
+                <li>
+                    <h4>Font-Awesome Icons</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been the industry's standard dummy text ever
+                        since the 1500s, when an unknown printer.</p>
+                </li>
+                <li>
+                    <h4>Fully Responsive Design</h4>
+                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum
+                        as their default model text, and a search for 'lorem ipsum' will uncover
+                        many web sites still in their infancy</p>
+                </li>
+                <li>
+                    <h4>Working Contact form</h4>
+                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum
+                        as their default model text, and a search for 'lorem ipsum' will uncover
+                        many web sites still in their infancy</p>
+                </li>
+                <li>
+                    <h4>Retina Ready icons here</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                        or randomised words which don't look even slightly believable.</p>
+                </li>
+                <li>
+                    <h4>Friendly Code</h4>
+                    <p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their
+                        exact original form, accompanied by English versions from the 1914 translation by H. Rackham</p>
+                </li>
+                <li>
+                    <h4>Flat trendy landing page Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been the industry's standard dummy text ever
+                        since the 1500s, when an unknown printer.</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="about-us">
         <div class="bg-area"></div>
@@ -130,83 +132,87 @@
         </div>
     </section>
     <section class="your-price">
-        <header class="section-header">
-            <h2>Choose your price</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing typesetting.</p>
-        </header>
-        <ul class="price-list">
-            <li>
-                <p class="plan">Basic plan</p>
-                <div class="price">
-                    <div>
-                        <span>$</span>
-                        <span class="price-number">22</span>
+        <div class="container">
+            <header class="section-header">
+                <h2>Choose your price</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing typesetting.</p>
+            </header>
+            <ul class="price-list">
+                <li>
+                    <p class="plan">Basic plan</p>
+                    <div class="price">
+                        <div>
+                            <span>$</span>
+                            <span class="price-number">22</span>
+                        </div>
+                        <p>per month</p>
                     </div>
-                    <p>per month</p>
-                </div>
-                <p class="border-text">1 Account</p>
-                <p class="border-text">8 hour support</p>
-                <p class="border-text">Custom Cloud Services</p>
-                <button type="button" class="main-btn">Get Started</button>
-            </li>
-            <li>
-                <p class="plan">Premium plan</p>
-                <div class="price">
-                    <div>
-                        <span>$</span>
-                        <span class="price-number">42</span>
+                    <p class="border-text">1 Account</p>
+                    <p class="border-text">8 hour support</p>
+                    <p class="border-text">Custom Cloud Services</p>
+                    <button type="button" class="main-btn">Get Started</button>
+                </li>
+                <li>
+                    <p class="plan">Premium plan</p>
+                    <div class="price">
+                        <div>
+                            <span>$</span>
+                            <span class="price-number">42</span>
+                        </div>
+                        <p>per month</p>
                     </div>
-                    <p>per month</p>
-                </div>
-                <p class="border-text">2 Account</p>
-                <p class="border-text">100MB Storage</p>
-                <p class="border-text">Custom Cloud Services</p>
-                <button type="button" class="main-btn">Get Started</button>
-            </li>
-            <li>
-                <p class="plan">Gold plan</p>
-                <div class="price">
-                    <div>
-                        <span>$</span>
-                        <span class="price-number">62</span>
+                    <p class="border-text">2 Account</p>
+                    <p class="border-text">100MB Storage</p>
+                    <p class="border-text">Custom Cloud Services</p>
+                    <button type="button" class="main-btn">Get Started</button>
+                </li>
+                <li>
+                    <p class="plan">Gold plan</p>
+                    <div class="price">
+                        <div>
+                            <span>$</span>
+                            <span class="price-number">62</span>
+                        </div>
+                        <p>per month</p>
                     </div>
-                    <p>per month</p>
-                </div>
-                <p class="border-text">8 Account</p>
-                <p class="border-text">24 hour support</p>
-                <p class="border-text">Custom Cloud Services</p>
-                <button type="button" class="main-btn">Get Started</button>
-            </li>
-        </ul>
+                    <p class="border-text">8 Account</p>
+                    <p class="border-text">24 hour support</p>
+                    <p class="border-text">Custom Cloud Services</p>
+                    <button type="button" class="main-btn">Get Started</button>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="how-it-works">
-        <header class="section-header">
-            <h2>How it works</h2>
-            <p>Lorem Ipsum is simply dummy Business industry</p>
-        </header>
-        <ul class="steps-list">
-            <li>
-                <h3>Step 1</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                    ustry. Lorem Ipsum has been</p>
-            </li>
-            <li>
-                <h3>Step 2</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                    ustry. Lorem Ipsum has been</p>
-            </li>
-            <li>
-                <h3>Step 3</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                    ustry. Lorem Ipsum has been</p>
-            </li>
-            <li>
-                <h3>Step 4</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
-                    ustry. Lorem Ipsum has been</p>
-            </li>
-        </ul>
-        <button type="button" class="main-btn">Get start Now</button>
+        <div class="container">
+            <header class="section-header">
+                <h2>How it works</h2>
+                <p>Lorem Ipsum is simply dummy Business industry</p>
+            </header>
+            <ul class="steps-list">
+                <li>
+                    <h3>Step 1</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been</p>
+                </li>
+                <li>
+                    <h3>Step 2</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been</p>
+                </li>
+                <li>
+                    <h3>Step 3</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been</p>
+                </li>
+                <li>
+                    <h3>Step 4</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been</p>
+                </li>
+            </ul>
+            <button type="button" class="main-btn">Get start Now</button>
+        </div>
     </section>
     <section class="clients">
         <div class="container">
